force-app/main/default/objects/SAP_SF_Field_Map__c/SAP_SF_Field_Map__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>SAP SF Field Map</label>
</CustomObject>