force-app/main/default/objects/SAP_SF_Field_Map__c/fields/EYI_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>EYI_Country_Code__c</fullName>
    <label>Country Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>