force-app/main/default/objects/SAP_SF_Field_Map__c/fields/SF_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>SF_Field_Name__c</fullName>
    <label>SF Field Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>