force-app/main/default/objects/SAP_SF_Field_Map__c/fields/SF_Value__c.field-meta.xml
<CustomField>
    <fullName>SF_Value__c</fullName>
    <label>SF Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>